--- a/emoticon/src/main/res/values/attrs.xml
+++ b/emoticon/src/main/res/values/attrs.xml
@@ -3,6 +3,7 @@
 
     <declare-styleable name="EmoticonTextView">
         <attr name="emoticonSize" format="dimension" />
+        <attr name="emoticonSchedule" format="integer" />
     </declare-styleable>
 
 </resources>
