--- a/app/src/main/res/layout/item_chat_left.xml
+++ b/app/src/main/res/layout/item_chat_left.xml
@@ -28,5 +28,6 @@
         android:text="hoanganhtuan95ptit"
         android:textColor="#000000"
         android:textSize="16sp"
-        app:emoticonSize="30sp"/>
+        app:emoticonSize="30sp"
+        app:emoticonSchedule="40"/>
 </LinearLayout>
