--- a/app/src/main/res/layout/item_chat_right.xml
+++ b/app/src/main/res/layout/item_chat_right.xml
@@ -21,5 +21,6 @@
         android:text="hoanganhtuan95ptit"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
-        app:emoticonSize="30sp" />
+        app:emoticonSize="30sp"
+        app:emoticonSchedule="40" />
 </RelativeLayout>
